Multiple drills with separate progress tracking.

--- a/Source/Stride/DrillControl.xaml
+++ b/Source/Stride/DrillControl.xaml
@@ -6,7 +6,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
 			 Name="This">
-	<Grid ShowGridLines="True">
+	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
